--- a/brand/models/brand/fields.yaml
+++ b/brand/models/brand/fields.yaml
@@ -4,7 +4,7 @@ fields:
         span: full
         type: text
         comment: 'Отображаться будет только в админ панели'
-    photos:
+    photo:
         label: 'Загрузка лого'
         mode: image
         useCaption: true
