--- a/contact/updates/version.yaml
+++ b/contact/updates/version.yaml
@@ -6,3 +6,6 @@
 1.0.3:
     - 'Updated table alex_contact_'
     - builder_table_update_alex_contact_.php
+1.0.4:
+    - 'Updated table alex_contact_'
+    - builder_table_update_alex_contact__2.php
